General change - change the encoding question to utf8

--- a/views/start.jade
+++ b/views/start.jade
@@ -11,4 +11,6 @@
                     .col-lg-12.col-md-12.col-sm-12.col-xs-12
                        a.btn.btn-primary.btn-lg.btn-block(href='/login') Войти
                        a.btn.btn-default.btn-lg.btn-block(href='/register') Зарегистрироваться
+                       h4.text-center.text-uppercase Или зайти через
+                       img.center-block(width='64',height='64',src="/images/socialNetworksLogo/facebook.png")
                     .col-lg-12.col-md-12.col-sm-12.col-xs-12
